# Rustflutter

./: Cargo.toml
src/: api.rs  domain.rs  infrastructure.rs  up.sql
