[package]
name = "blogapp"
version = "0.1.0"
edition = "2021"

[dependencies]

rocket = "0.5.0-rc.1"
rocket_contrib = "0.5.0-rc.1"
diesel = { version = "1.4.7", features = ["sqlite"] }
diesel_migrations = "1.4.0"
jsonwebtoken = "8.1.1"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"